# translate

./: README.md  fix.py  main.py  pyproject.toml  requirements.txt  test.py
translate/: __init__.py  dict.json  html_translater.py  image_translater.py  json_translater.py  langchain_utils.py  llava.py  main.py  markdown_translater.py  origin.html  origin1.md  paddle_test.py  pick_image.py  playwright_utils.py  task.json  translated1.md  utils.py
translate/env/: sample.yaml
translate/tools/: html_translater.py  image_translater.py  json_translater.py  markdown_translater.py
translate/utils/: __iniy__.py  config_utils.py  data_utils.py  file_utils.py  langchain_utils.py  playwright_utils.py  soup_utils.py  string_utils.py  test.html  test_cn.html
ylz_translate/: __init__.py  config.yaml  llava.py
ylz_translate/cli/: clear_task.py  copy_config.py  display_result.py  fix_dict.py  init.py  init_config.py  main.py  start.py  sync_dict.py  test.py
ylz_translate/tools/: html_translater.py  image_translater.py  json_translater.py  lake_translater.py  markdown_translater.py
ylz_translate/utils/: __iniy__.py  config_utils.py  data_utils.py  file_utils.py  langchain_utils.py  soup_utils.py
ylz_translate/ylz_utils/: __init__.py
