[tool.poetry]
name = "ylz-translate"
version = "0.1.30"
description = "渐进式文档翻译系统"
authors = ["toney88"]
readme = "README.md"

[[tool.poetry.packages]]
include = "ylz_translate"

[[tool.poetry.packages]]
include = "utils"
from = "./ylz_translate"

# [package.files]
# include = ["./ylz_translate/config.yaml"]

[tool.poetry.scripts]
ylz_translate = "ylz_translate.cli.main:main"
init_config = "ylz_translate.cli.init_config:copy_config"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.2.6"
langchain-openai = "^0.1.10"
langchain-community = "^0.2.6"
firecrawl-py = "^0.0.16"
logger = "^1.4"
playwright = "^1.44.0"
paddlepaddle = "^2.6.1"
paddleocr = "^2.7.3"
markdownify = "^0.12.1"
tqdm = "^4.66.4"
gradio-client = "^1.0.2"
argparse = "^1.4.0"
ipython = "^8.26.0"
faiss-cpu = "^1.8.0.post1"
pyyaml = "^6.0.1"
langchain-together = "^0.1.3"
langchain-google-genai = "^1.0.7"


[build-system]
requires = ["poetry-core","setuptools"]
build-backend = "poetry.core.masonry.api"

# [[tool.poetry.source]]
# name = "tsinghua"
# url = "https://pypi.tuna.tsinghua.edu.cn/simple"
# default = true
