[tool.poetry]
name = "ylz-translate"
version = "0.2.2"
description = "渐进式文档翻译系统-v1"
authors = ["toney88"]
readme = "README.md"

[[tool.poetry.packages]]
include = "ylz_translate"

# [[tool.poetry.packages]]
# include = "ylz_utils"
# from = "./ylz_translate"

# [package.files]
# include = ["./ylz_translate/config.yaml"]

[tool.poetry.scripts]
ylz_translate = "ylz_translate.cli.main:run"
init_config = "ylz_translate.cli.init_config:copy_config"

[tool.poetry.dependencies]
python = "^3.10"
firecrawl-py = "^0.0.16"
markdownify = "^0.12.1"
tqdm = "^4.66.4"
argparse = "^1.4.0"
pyyaml = "^6.0.1"
ylz-utils = "^0.1.0"


[build-system]
requires = ["poetry-core","setuptools"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "default"
