[tool.poetry]
name = "ylz-translate"
version = "0.2.6"
description = "渐进式文档翻译系统-v2"
authors = ["toney88"]
readme = "README.md"

[[tool.poetry.packages]]
include = "ylz_translate"

# [[tool.poetry.packages]]
# include = "ylz_utils"
# from = "./ylz_translate"

# [package.files]
# include = ["./ylz_translate/config.yaml"]

[tool.poetry.scripts]
ylz_translate = "ylz_translate.cli.main:run"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
firecrawl-py = "^0.0.16"
tqdm = "^4.66.4"
argparse = "^1.4.0"
pyyaml = "^6.0.1"
ylz-utils = "^0.1.13"

[build-system]
requires = ["poetry-core","setuptools"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "default"
